优化Redis版本的布隆过滤器